docker/backend/conf/envoy.yaml
node:
  id: "id_01"
  cluster: "cluster_01"
static_resources:
  listeners:
  - name: be_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8001
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          idle_timeout: 1s
          codec_type: auto
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/tmp/envoy-to-envoy-mtls.log"
          stat_prefix: ingress_http
          route_config:
            name: backend
            virtual_hosts:
            - name: backend_mtls
              domains: ["*"]
              routes:
              - match:
                  prefix: "/hello"
                route:
                  cluster: backend_server
              - match:
                  prefix: "/claims"
                route:
                  cluster: backend_server
          http_filters:
          - name: envoy.ext_authz
            config:
              failure_mode_allow: false
              grpc_service:
                google_grpc:
                  target_uri: opa:9191
                  stat_prefix: ext_authz
                timeout: 0.5s
          - name: envoy.router

  clusters:
  - name: backend_server
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: web_server
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080
